[package]
name = "cpuid"
description = "A utility to identify a cpu and features present. It uses the 'CPUID' instruction and on platforms that support it, feature MSRs."
version = "0.1.0"
authors = ["Joshua Job <jjob@scalecomputing.com>"]
edition = "2018"
license = "MIT"

[dependencies]
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
enum_dispatch = "0.3.8"

[features]
default = ["use_msr"]
use_msr = []
