[package]
name = "cpuinfo"
description = "A utility to identify a cpu and features present. It uses the 'CPUID' instruction and on platforms that support it, feature MSRs."
version = "0.2.0"
authors = ["Joshua Job <jjob@scalecomputing.com>"]
edition = "2018"
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
enum_dispatch = "0.3.8"
serde_json = "1.0.117"

[target.'cfg(target_os = "linux")'.dependencies]
kvm-ioctls = { version = "0.17", optional = true }
kvm-bindings = { version = "0.8", features = ["fam-wrappers"], optional = true }

[features]
default = ["use_msr", "kvm"]
use_msr = []
kvm = [ "dep:kvm-ioctls", "dep:kvm-bindings" ]
